fix subscribe button label not showing on mobile

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -227,6 +227,11 @@
   width: 100%;
 }
 
+.claim-preview__primary-actions {
+  @extend .section__actions;
+  margin-top: 0;
+}
+
 .claim-preview__actions--header {
   @extend .claim-preview__actions;
   flex-wrap: wrap;
